Update trabalho de discreta.ipynb

--- a/trabalho de discreta.ipynb
+++ b/trabalho de discreta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4a8bb6a4",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f3186854",
    "metadata": {},
    "outputs": [
@@ -21,59 +21,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vértice sucetivel a t com probabilidade atual de 0.8317017167391456 no tempo 0\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9337976076800899 no tempo 1\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9739583985296312 no tempo 2\n",
-      "vértice sucetivel a t com probabilidade atual de 0.989756185510352 no tempo 3\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9959704575220857 no tempo 4\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9984149250850479 no tempo 5\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9993764893530691 no tempo 6\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9997547336401428 no tempo 7\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999035211467338 no tempo 8\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999620487293942 no tempo 9\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999850713494037 no tempo 10\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999941276107314 no tempo 11\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999976900149253 no tempo 12\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999990913354802 no tempo 13\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999996425642137 no tempo 14\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999998593976558 no tempo 15\n",
-      "vértice foi convencido por t após 16 tempos\n"
+      "vértice sucetivel a t com probabilidade atual de 0.1682982832608544 no tempo 0\n",
+      "vértice sucetivel a t com probabilidade atual de 0.2516694867690725 no tempo 1\n",
+      "vértice sucetivel a t com probabilidade atual de 0.0657153193463829 no tempo 2\n",
+      "vértice sucetivel a t com probabilidade atual de 0.8739223544011808 no tempo 3\n",
+      "vértice sucetivel a t com probabilidade atual de 0.969244657948444 no tempo 4\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9938476974360971 no tempo 5\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9989733425607489 no tempo 6\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9998532933317545 no tempo 7\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9999816608840048 no tempo 8\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9999979623093737 no tempo 9\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9999997962308127 no tempo 10\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9999999814755272 no tempo 11\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9999999984562938 no tempo 12\n",
+      "vértice sucetivel a t com probabilidade atual de 0.9999999998812533 no tempo 13\n",
+      "vértice foi convencido por t após 14 tempos\n"
      ]
     }
    ],
    "source": [
+    "#Matriz de adjacencia que modela o grafo cujo os vértices são as opiniões/posts\n",
     "A =[[0, 1, 1, 1],\n",
     "    [1, 0, 0, 1],\n",
     "    [1, 1, 0, 1],\n",
     "    [1, 1, 1, 0]]\n",
     "\n",
-    "B = 0.67\n",
-    "t = 0\n",
-    "prob = 0\n",
-    "prod = 1\n",
+    "#PARAMETROS INICIAIS DO PROBLEMA\n",
+    "\n",
+    "B = 0.67 #Taxa de transmissão\n",
+    "t = 0 #Parâmetros de informação\n",
     "k = 0\n",
     "\n",
-    "\n",
-    "while prob != 1:\n",
-    "    x = [sc.stats.norm.pdf(t, 0, 1), sc.stats.poisson.pmf(t, 1), sc.stats.bernoulli.pmf(t, 1, 1), sc.stats. poisson.pmf(t, 2)]\n",
+    "#Probabilidade de um post influenciar um vértice num tempo t+1\n",
+    "def probx(tempo, MA, Taxainfo): \n",
+    "    prod = 1\n",
+    "    x = [sc.stats.norm.pdf(t, 0, 1), sc.stats.poisson.pmf(t, 1), sc.stats.bernoulli.pmf(t, 1, 1), sc.stats. poisson.pmf(t, 2)] #vetor de estado\n",
     "    xi = np.array(x)\n",
     "    xi.transpose\n",
     "    for i in range(len(A)):\n",
     "        for j in range(len(A)-1):\n",
-    "            prod = prod*(1 - B*A[i][j]*xi[j])\n",
-    "    prob = 1 - prod\n",
-    "    \n",
+    "            prod *= (1 - B*A[i][j]*xi[j])\n",
+    "    return prod\n",
     "\n",
-    "    if prob > 0.9999999:\n",
+    "\n",
+    "#Calculo de quanto tempo ele leva para ser influenciado\n",
+    "prob = 0\n",
+    "while prob != 1:\n",
+    "    prob = probx(t, A, B)\n",
+    "\n",
+    "    if prob > 0.9999999999:\n",
     "            prob = 1\n",
+    "    \n",
     "    if prob == 1:\n",
     "        print(f'vértice foi convencido por t após {k} tempos')\n",
     "        break\n",
-    "        \n",
     "    else:\n",
     "        print(f'vértice sucetivel a t com probabilidade atual de {prob} no tempo {k}')\n",
-    "           \n",
-    "    t = t + 0.0001\n",
+    "      \n",
+    "    t = t + 1\n",
     "    k = k+1"
    ]
   }
