--- a/trabalho de discreta.ipynb
+++ b/trabalho de discreta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4a8bb6a4",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "f3186854",
    "metadata": {},
    "outputs": [
@@ -21,64 +21,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vértice sucetivel a t com probabilidade atual de 0.4160272635422005 no tempo 0\n",
-      "vértice sucetivel a t com probabilidade atual de 0.47574264709386965 no tempo 1\n",
-      "vértice sucetivel a t com probabilidade atual de 0.08068417831590845 no tempo 2\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9167974246531858 no tempo 3\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9794777028022771 no tempo 4\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9958952397821054 no tempo 5\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9993154486078064 no tempo 6\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999021931690393 no tempo 7\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999877738853036 no tempo 8\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999986415391211 no tempo 9\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999998641538705 no tempo 10\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999999876503514 no tempo 11\n",
-      "vértice sucetivel a t com probabilidade atual de 0.9999999989708626 no tempo 12\n",
-      "vértice foi convencido por t após 13 tempos\n"
+      "vértice 1 foi convencido por t após 13 tempos\n",
+      "vértice 2 foi convencido por t após 7 tempos\n",
+      "vértice 3 foi convencido por t após 7 tempos\n",
+      "vértice 4 foi convencido por t após 13 tempos\n"
      ]
     }
    ],
    "source": [
     "#Matriz de adjacencia que modela o grafo cujo os vértices são as opiniões/posts\n",
-    "A =[[0, 1, 0, 0],\n",
+    "A =[[0, 1, 1, 1],\n",
     "    [1, 0, 1, 0],\n",
-    "    [0, 1, 0, 1],\n",
-    "    [0, 0, 1, 0]]\n",
+    "    [1, 0, 0, 1],\n",
+    "    [1, 1, 1, 0]]\n",
     "\n",
     "#PARAMETROS INICIAIS DO PROBLEMA\n",
     "\n",
     "B = 0.67 #Taxa de transmissão\n",
-    "t = 0 #Parâmetros de informação\n",
-    "k = 0\n",
     "\n",
-    "#Probabilidade de um post influenciar um vértice num tempo t+1\n",
-    "def probx(tempo, MA, Taxainfo): \n",
+    "#Probabilidade de um post influenciar um vértice i num tempo t+1\n",
+    "def probx(tempo, MA, i, Taxainfo): \n",
     "    prod = 1\n",
     "    x = [sc.stats.norm.pdf(t, 0, 1), sc.stats.poisson.pmf(t, 1), sc.stats.bernoulli.pmf(t, 1, 1), sc.stats. poisson.pmf(t, 1)] #vetor de estado\n",
     "    xi = np.array(x)\n",
     "    xi.transpose\n",
-    "    for i in range(len(A)):\n",
-    "        for j in range(len(A)-1):\n",
-    "            prod *= (1 - B*A[i][j]*xi[j])\n",
+    "    for j in range(len(A)-1):\n",
+    "        prod *= (1 - B*A[i][j]*xi[j]) #produtorio\n",
     "    return prod\n",
     "\n",
-    "\n",
-    "#Calculo de quanto tempo ele leva para ser influenciado\n",
-    "prob = 0\n",
-    "while prob != 1:\n",
-    "    prob = probx(t, A, B)\n",
-    "\n",
-    "    if prob > 0.9999999999:\n",
-    "            prob = 1\n",
+    "#Calculo de quanto tempo cada vertice leva para ser influenciado\n",
+    "for i in range(len(A)):\n",
     "    \n",
-    "    if prob == 1:\n",
-    "        print(f'vértice foi convencido por t após {k} tempos')\n",
-    "        break\n",
-    "    else:\n",
-    "        print(f'vértice sucetivel a t com probabilidade atual de {prob} no tempo {k}')\n",
-    "      \n",
-    "    t = t + 1\n",
-    "    k = k+1"
+    "    t = 0 #Parâmetros de informação\n",
+    "    k = 0 #Contador de iteração\n",
+    "    while prob != 1:\n",
+    "        prob = probx(t, A, i, B)\n",
+    "        #print(prob)\n",
+    "        if prob > 0.9999999999:\n",
+    "                prob = 1\n",
+    "        \n",
+    "        if prob == 1:\n",
+    "            print(f'vértice {i+1} foi convencido por t após {k} tempos')\n",
+    "            prob = 0\n",
+    "            break\n",
+    "        #else:\n",
+    "            print(f'vértice {i+1} sucetivel a t com probabilidade atual de {prob} no tempo {t}')\n",
+    "        \n",
+    "        t = t + 1\n",
+    "        k = k+1\n",
+    "        prob = 0\n"
    ]
   }
  ],
